[FIX][UI] Improve light/dark navbar colors and backgrounds for better contrast.

--- a/themes/jqui/options/haus/css/haus.css
+++ b/themes/jqui/options/haus/css/haus.css
@@ -97,7 +97,5 @@ input[type="submit"]:hover,
   color: #666;
 }
     
-/*.topbar .cssmenu_horiz {
-    line-height: 0;
-}*/
+.topbar .bg-light { background: transparent !important; }
 
